# Piazza-AI-Plugin

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
backend/: .gitignore  README.md  VENV_SETUP.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_database_handler.py
backend/app/: __init__.py
backend/app/api/: __init__.py  routes.py
backend/app/api/endpoints/: auth.py  doc_upload.py  example.py  ingestion.py  llm.py  piazza.py
backend/app/core/: __init__.py  config.py  database.py  supabase.py
backend/app/models/: __init__.py  auth.py  llm.py  piazza.py
backend/app/pdfx/: __init__.py  bourdain-8bfc712a01f7f1b23a34f07643f6cf16d3f7bcec69efe1aef7985764ccdb1ae8.jsonl  extraction.py  pdfx.py
backend/app/pipeline/: __init__.py  pdfx.py
backend/app/textGeneration/: __init__.py  llm_service.py
backend/app/threadIngestion/: __init__.py  main.py
backend/app/threadIngestion/helpers/: User.py  __init__.py  ingestion_service.py  post_processor.py
backend/tests/: __init__.py
frontend/: README.md  manifest.json  package-lock.json  package.json  postcss.config.js  tailwind.config.js  webpack.config.cjs  webpack.config.js
frontend-react/: index.html  manifest.json  package-lock.json  package.json  vite.config.js
frontend-scaffolding/: package-lock.json  package.json  postcss.config.js  tailwind.config.js  webpack.config.cjs
frontend/src/: App.jsx  (+3 more)
supabase/: .gitignore  README.md  config.toml  seed.sql
(+64 files in other folders)
