[project]
name = "piazza-ai-backend"
version = "0.1.0"
description = "Minimal FastAPI backend for Piazza AI Plugin"
authors = [
    {name = "Tony Liu", email = "tony@ubclaunchpad.com"},
    {name = "Harsha Amin", email = "harsha@ubclaunchpad.com"},
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"